notification work but not after reload

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -403,6 +403,7 @@
     <script type="module" src="assets/js/profile.js" defer></script>
     <script type="module" src="assets/js/emojiPicker.js" defer></script>
     <script type="module" src="assets/js/private_chat.js" defer></script>
+    <script type="module" src="assets/js/privateChatNotifications.js" defer></script>
 
     <script>
         function scrollToBottom() {
