--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/background.css">
     <link rel="stylesheet" href="./assets/css/registration.css">
     <link rel="stylesheet" href="./assets/css/home.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="icon" type="image/png" href="./assets/img/logo.png">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800&display=swap" rel="stylesheet">
     <style>
@@ -16,9 +17,7 @@
             padding: 0px;
             margin: 0px;
             background: #41443f;
-
             color: #e6ebf3;
-
             border-top: 1px solid #e9ecef;
         }
 
@@ -135,9 +134,11 @@
             justify-content: space-between;
             background: #0f1420;
             border-bottom: 1px solid #22324e;
-            gap: 25rem;
         }
 
+        .closeChatBtn {
+            margin: 0px;
+        }
         .chat-input-wrapper {
             background-color: #0f1420;
         }
@@ -215,6 +216,7 @@
             box-shadow: 3px rgba(255, 192, 203, 0.4);
             border-color: #5c585b;
         }
+
     </style>
 </head>
 
